# p4est-bddcml

./: CMake.vars.Jakub  CMake.vars.Pavel  CMake.vars.example  CMakeLists.txt  Makefile  README.md  make.inc.example
3d_wrappers/: metis8_bddcml.cc  my_p8est_interface.cc  p8est_assemble.cc  p8est_bddcml.cc  p8est_common.cc  p8est_example.cc  p8est_femspace.cc  p8est_mesh.cc
drivers/: bddcml_cube_example.cc  metis_bddcml.cc  p4est_bddcml.cc  p4est_example.cc  p4est_experiment.cc  p4est_migration.cc  p8est_bddcml.cc  p8est_example.cc  test_quadrature.cc  uniform_conv.cc
include/: analytical_solution.h  arrays.h  assemble.h  bddcml_cube_example.h  bddcml_cube_example_subdomain.h  bddcml_structs.h  definitions.h  element.h  femspace.h  geometry_mesh.h  helpers.h  integral.h  integration_cell.h  level_set.h  local_matrix.h  local_solution.h  mesh.h  my_p4est_implementation.h  my_p4est_interface.h  p4est_bddcml_interaction.h  p4est_common.h  quadrature.h  shapefun.h  vtk_output.h
include/bddcml/: arrays.h  bddcml_femspace.h  bddcml_mesh.h  bddcml_solver.h  bddcml_structs.h
include/p4est/: my_p4est_implementation.h  my_p4est_interface.h
lib/: Makefile
src/: analytical_solution.cc  arrays.cc  assemble.cc  bddcml.c  bddcml_cube_example.c  bddcml_cube_example.cc  bddcml_cube_example_subdomain.c  bddcml_structs.c  bddcml_structs.cc  definitions.cc  element.cc  femspace.cc  gauss_quadrature.cc  geometry_mesh.cc  helpers.c  helpers.cc  integral.cc  integration_cell.cc  level_set.cc  local_matrix.cc  local_solution.cc  mesh.cc  metis8_bddcml.cc  metis_bddcml.c  metis_bddcml.cc  my_p4est_implementation.cc  my_p4est_interface.cc  my_p8est_implementation.cc  p4est-bddcml.c  p4est_bddcml.c  p4est_bddcml.cc  p4est_bddcml_interaction.c  p4est_bddcml_interaction.cc  p4est_common.c  p4est_common.cc  p4est_example.c  p4est_experiment.cc  p8est-bddcml.c  p8est_bddcml.c  p8est_bddcml_interaction.c  (+7 more)
src/bddcml/: arrays.cc  bddcml_femspace.cc  bddcml_mesh.cc  bddcml_solver.cc  bddcml_structs.cc
src/p4est/: my_p4est_implementation.cc  my_p4est_interface.cc
